// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer is accessible 1`] = `
<div
  id="body-node"
>
  <input
    tabindex="-1"
  />
  <input
    tabindex="-1"
    data-tabindex="10"
  />
</div>
`;

exports[`Layer is accessible 2`] = `
<div
  id="layer-node"
>
  This is a layer
  <input />
</div>
`;

exports[`Layer is accessible 3`] = `
<div
  id="body-node"
>
  <input />
  <input
    tabindex="10"
  />
</div>
`;

exports[`Layer mounts 1`] = `
<div
  class="StyledGrommet-gKbdxL gNdtBf"
>
  <span
    style="display: none;"
  />
</div>
`;

exports[`Layer renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;
